# GiftCoordination

./: .gitignore  Cargo.toml  Rocket.toml  config_test.toml
src/: data.rs  db.rs  email.rs  main.rs  webserver.rs
templates/: access_denied.html.hbs  create_list.html.hbs  default_template.html.hbs  email_invite.html.hbs  index.html.hbs  internal_error.html.hbs  list.html.hbs  list_user_other.html.hbs  list_user_self.html.hbs  modify_list.html.hbs  not_found.html.hbs  user.html.hbs
