[package]
name = "gift_coordination"
version = "0.1.0"
authors = ["ZachNo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0.138"
serde_json = "^1.0.85"
rand = "^0.8.4"
hex = "^0.4.3"
config-file = "0.2.3"

[dependencies.uuid]
version = "^1.1.2"
features = ["serde", "v4"]

[dependencies.rusqlite]
version = "^0.25.4"
features = ["bundled"]

[dependencies.rocket]
version = "^0.5.0-rc.2"
features = ["secrets"]

[dependencies.rocket_dyn_templates]
version = "^0.1.0-rc.2"
features = ["handlebars", "tera"]

[dependencies.rocket_sync_db_pools]
version = "^0.1.0-rc.2"
default-features = false
features = ["sqlite_pool"]

[dependencies.lettre]
version = "^0.10.0-rc.7"
features = ["sendmail-transport"]
